--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "dev" : "nodemon ."
+    "dev": "nodemon ."
   },
   "author": "Leonel Mamani",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.25.1"
+    "apollo-server": "^2.25.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
